name:          linear
category:      Math, Algebra
version:       1.10.1.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/linear/
bug-reports:   http://github.com/ekmett/linear/issues
copyright:     Copyright (C) 2012-2014 Edward A. Kmett
synopsis:      Linear Algebra
description:   Types and combinators for linear algebra on free vector spaces
build-type:    Custom
tested-with:   GHC == 7.4.1, GHC == 7.4.2, GHC == 7.6.1
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  travis/cabal-apt-install
  travis/config
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/linear.git

library
  build-depends:
    adjunctions          >= 4     && < 5,
    base                 >= 4.5   && < 5,
    binary               >= 0.5   && < 0.8,
    containers           >= 0.4   && < 0.6,
    distributive         >= 0.2.2 && < 1,
    ghc-prim,
    hashable             >= 1.1   && < 1.3,
    lens                 >= 4     && < 5,
    reflection           >= 1.3.2 && < 2,
    semigroups           >= 0.9   && < 1,
    semigroupoids        >= 3     && < 5,
    tagged               >= 0.4.4 && < 1,
    template-haskell     >= 2.7   && < 3.0,
    transformers         >= 0.2   && < 0.5,
    unordered-containers >= 0.2.3 && < 0.3,
    vector               >= 0.10  && < 0.11,
    void                 >= 0.6   && < 1

  exposed-modules:
    Linear
    Linear.Affine
    Linear.Algebra
    Linear.Binary
    Linear.Conjugate
    Linear.Covector
    Linear.Epsilon
    Linear.Instances
    Linear.Matrix
    Linear.Metric
    Linear.Plucker
    Linear.Quaternion
    Linear.Trace
    Linear.V
    Linear.V0
    Linear.V1
    Linear.V2
    Linear.V3
    Linear.V4
    Linear.Vector

  ghc-options: -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: src

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -Werror -threaded
  hs-source-dirs: tests
  build-depends:
    base,
    directory >= 1.0 && < 1.3,
    doctest   >= 0.8 && < 0.10,
    filepath  >= 1.3 && < 1.4,
    lens,
    simple-reflect >= 0.3.1

test-suite UnitTests
  type:           exitcode-stdio-1.0
  main-is:        UnitTests.hs
  other-modules:  Plucker, Binary
  ghc-options:    -Wall -Werror -threaded
  hs-source-dirs: tests
  build-depends:
    base,
    binary,
    bytestring,
    test-framework >= 0.8,
    test-framework-hunit >= 0.3,
    HUnit >= 1.2.5,
    linear
